--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -14,3 +14,15 @@
   display: flex;
   justify-content: center;
 }
+.inpuTarea{
+  height: 20px;
+  width: 200px;
+  border: none;
+  border-right: white solid 1px;
+  border-bottom: white solid 1px;
+  border-radius: 5px;
+  background-color: transparent;
+}
+.inpuTarea:focus{
+  outline: none;
+}
