--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #040404;
+  background-color: #04040485;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
